# maestro

./: .gitignore  Makefile  README.md  setup.cfg
maestro/: __init__.py  config.py  main.py  parser.py
scripts/: makefile-debug.sh  makefile-init.sh  makefile-lint.sh  makefile-wheel.sh
