[metadata]
name = maestro
version = attr: maestro.__version__
description = attr: maestro.__description__
long_description = file: README.md

[options]
packages = find:
install_requires =
    black==20.8b1
    isort==5.7.0
    Keras==2.4.3
    nltk==3.5
    numpy==1.19.2
    pep517==0.9.1
    tensorflow==2.4.1

[options.entry_points]
console_scripts =
    maestro = maestro.main:main
